--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-XDN53WTF5R"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2WVX7LEWWB"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-XDN53WTF5R');
+  gtag('config', 'G-2WVX7LEWWB');
 </script>
         <title>Bientôt!</title>
         <meta name="viewport" content="initial-scale = 1.0, minimum-scale = 1.0, maximum-scale = 1.0, user-scalable = no, width = device-width" />
